--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="lien-info-text">Devenir partenaire</div></a>
                 </li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </div>
     </footer>
