--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -157,7 +157,7 @@
                     <div class="lien-info-text">Devenir partenaire</div></a>
                 </li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </div>
     </footer>
