--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -45,6 +45,9 @@
                             <div class="carte-menu-prix">
                                 <p>25€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -53,6 +56,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>35€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                         <div class="carte-menu">
@@ -63,6 +69,9 @@
                             <div class="carte-menu-prix">
                                 <p>20€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -71,6 +80,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>35€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
@@ -89,6 +101,9 @@
                             <div class="carte-menu-prix">
                                 <p>40€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -98,6 +113,9 @@
                             <div class="carte-menu-prix">
                                 <p>35€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -106,6 +124,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>44€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
@@ -124,6 +145,9 @@
                             <div class="carte-menu-prix">
                                 <p>18€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -133,6 +157,9 @@
                             <div class="carte-menu-prix">
                                 <p>22€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -141,6 +168,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>23€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
