--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -45,6 +45,9 @@
                             <div class="carte-menu-prix">
                                 <p>25€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -54,6 +57,9 @@
                             <div class="carte-menu-prix">
                                 <p>35€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -62,6 +68,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>20€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
@@ -80,6 +89,9 @@
                             <div class="carte-menu-prix">
                                 <p>40€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -89,6 +101,9 @@
                             <div class="carte-menu-prix">
                                 <p>35€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -97,6 +112,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>44€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
@@ -115,6 +133,9 @@
                             <div class="carte-menu-prix">
                                 <p>18€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -124,6 +145,9 @@
                             <div class="carte-menu-prix">
                                 <p>22€</p>
                             </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
+                            </div>
                         </div>
                         <div class="carte-menu">
                             <div class="carte-menu-text">
@@ -132,6 +156,9 @@
                             </div>
                             <div class="carte-menu-prix">
                                 <p>23€</p>
+                            </div>
+                            <div class="carte-menu-check">
+                                <i class="fa-solid fa-circle-check check-out"></i>
                             </div>
                         </div>
                     </div>
