--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="fonction-choix">
                     <div class="fonction-choix-numb">1</div>
                     <div class="fonction-choix-icon"><span><i class="fa-solid fa-mobile-screen-button"></i></span></div>
-                    <div class="fonction-choix-text">Choisissez un restaurants</div>
+                    <div class="fonction-choix-text">Choisissez un restaurant</div>
                 </div>
                 <div class="fonction-choix">
                     <div class="fonction-choix-numb">2</div>
@@ -52,7 +52,7 @@
                 <div class="fonction-choix">
                     <div class="fonction-choix-numb">3</div>
                     <div class="fonction-choix-icon"><span><i class="fa-solid fa-store"></i></span></div>
-                    <div class="fonction-choix-text">Dégustez au restaurants</div>
+                    <div class="fonction-choix-text">Dégustez au restaurant</div>
                 </div>
             </div>
         </section>
